# codex-switch

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md
.github/: dependabot.yml
.github/workflows/: homebrew.yml  release.yml
docs/: CHANGELOG.md  RELEASE.md
scripts/: install.ps1  install.sh
src/: auth.rs  cache.rs  cli.rs  color.rs  config.rs  error.rs  jwt.rs  lib.rs  login.rs  main.rs  output.rs  process.rs  profile.rs  update.rs  usage.rs  warmup.rs
src/daemon/: loop_runner.rs  mod.rs  notify.rs  pidfile.rs  service.rs
src/tui/: app.rs  keymap.rs  menu.rs  mod.rs  popup.rs  ui.rs
tests/: cli_edge_cases.rs  test_daemon_integration.rs  test_mock_http.rs  test_scoring_e2e.rs
tests/mock/: mod.rs  scenarios.rs  transformer.rs
