[package]
name = "codex-switch"
version = "0.0.15"
edition = "2024"
rust-version = "1.88"
description = "Codex account switcher — multi-profile manager with usage dashboard"
license = "MIT"
repository = "https://github.com/xjoker/codex-switch"
keywords = ["codex", "openai", "account", "switcher", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "codex_switch"
path = "src/lib.rs"

[[bin]]
name = "codex-switch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
flate2 = "1"
semver = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
self-replace = "1"
tempfile = "3"
webbrowser = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = "0.29"
urlencoding = "2"
toml = "1"
rand = "0.10"
fs2 = "0.4"
chrono = { version = "0.4", features = ["clock"] }
supports-color = "3"
owo-colors = "4"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }
libc = "0.2"

[dev-dependencies]
axum = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
